lowgi alignment corrected

--- a/frontend/src/Components/Example/Example.css
+++ b/frontend/src/Components/Example/Example.css
@@ -106,20 +106,24 @@
   }
 }
 
+/* For screens smaller than 768px */
 @media (max-width: 768px) {
   .example-section {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
   }
 
   .example-content-left,
   .example-section__content-right {
     max-width: 100%;
+    text-align: center;
   }
 
   .example-section__content-right h2 {
-    font-size: 3.5vw;
-    width: 80vw;
+    font-size: 3.8vw;
+    width: 50vw;
     margin: 0 auto;
     padding-bottom: 2vw;
     order: 1;
@@ -129,10 +133,12 @@
   .first-child {
     padding-bottom: 2vw;
     order: 2;
+    text-align: center;
   }
 
   .example-content-left {
     order: 3;
+    text-align: center;
   }
 
   .second-child {
@@ -149,14 +155,18 @@
     display: flex;
     font-size: 3vw;
     line-height: 4vw;
-    text-align: justify;
+    text-align: center;
     width: 80vw;
     flex-direction: row;
     gap: 0;
     order: 4;
+    justify-content: center;
+    align-items: center;
   }
+
   .example-content-left img {
     margin: 0 auto;
+    text-align: center;
   }
 }
 
@@ -165,22 +175,30 @@
   .example-section {
     padding: 3vw;
     gap: 1vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .example-content-left img {
     width: 33vw;
     height: auto;
     margin: 0 auto;
+    text-align: center;
   }
 
   .example-section__content-right h2 {
-    font-size: 3.2vw;
+    font-size: 3.3vw;
     order: 1;
+    text-align: center;
+    width: 50vw;
   }
 
   .example-section__content-right p {
     font-size: 3vw;
     line-height: 4vw;
+    text-align: center;
   }
 
   .small-screen {
@@ -188,12 +206,17 @@
     line-height: 4vw;
     width: 80vw;
     order: 4;
+    text-align: center;
   }
+
   .first-child {
     padding-bottom: 2vw;
     order: 2;
+    text-align: center;
   }
+
   .example-content-left {
     order: 3;
+    text-align: center;
   }
 }
