--- a/frontend/src/Components/Verified-Cerificate/VerifiedCertificate.css
+++ b/frontend/src/Components/Verified-Cerificate/VerifiedCertificate.css
@@ -96,7 +96,7 @@
     font-size: 4vw;
   }
   .verification-left-section .verified-second-para {
-    font-size: 2vw;
+    font-size: 2.5vw;
     line-height: 3vw;
     font-weight: 700;
   }
